    before attempting to print flag usage. In the event that collecting flags for
    the printing the usage message fails, users will still receive a useful message
    as to why flag parsing failed. ``PHAB_ID=D137629``

  * util-core: Promises/Futures now use LIFO execution order for their callbacks
    (was depth-based algorithm before).  ``PHAB_ID=D135407``

Deprecations:

  * util-core: RichU64* APIs are deprecated. Use Java 8 Unsigned Long API instead:
    ``PHAB_ID=D137893``

    - `new RichU64String("123").toU64Long` -> `Long.parseUnsignedInt`
    - `new RichU64Long(123L).toU64HexString` -> `Long.toHexString` (no leading zeros)

18.2.0  2018-02-05

New Features:

  * util-core: Added implicit conversion for percentage specified as "x.percent"
    to a fractional Double in `c.t.conversions.percent`. ``PHAB_ID=D128792``

  * util-tunable: Add deserializer for `c.t.u.StorageUnit` to JsonTunableMapper
    ``PHAB_ID=D132368``

Runtime Behavior Changes:

  * util-app: When `c.t.a.App.exitOnError` is called, it now gives `close`
    an opportunity to clean up resources before exiting with an error.
    ``PHAB_ID=D129437``

18.1.0  2018-01-17

New Features:

  * util-security: Added `c.t.util.security.X509CrlFile` for reading
    Certificate Revocation List PEM formatted `X509CRL` files.
    ``PHAB_ID=D127700``

17.12.0  2017-12-08

API Changes:

  * util-collection: `c.t.util.SetMaker` has been removed.
    Direct usage of Guava is recommended if needed. ``PHAB_ID=D116852``

17.11.0  2017-11-15

Dependencies:

  * Guava has been removed as dependency from all modules except the
    'util-cache-guava' module. ``PHAB_ID=D117039``

New Features:

  * util-security: Added `c.t.util.security.PrivateKeyFile` for reading PKCS#8
    PEM formatted `PrivateKey` files. ``PHAB_ID=D105266``

Bug Fixes:

  * util-core: `c.t.io.BufByteWriter.fixed(size).owned()` will only represent bytes
    explicitly written instead of the full size of the backing array, `size`.